# simple-ai

./: .gitattributes  .gitignore  404.html  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  app.py  build.sh  cdk.json  ho_main.py  index.html  index.md  main.py  main_ho.py  main_v_0_0_1.py  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml  test.py
.github/docs_template/: head.py
CONTRIBUTING/: CONTRIBUTING.md  index.html
REFERENCE/: REFERENCE.md  index.html
Refinaid/App/: app.py
about/: index.html
app/: main.py
apps/aws-cdk-deployed/: cdk.py  pyproject.toml
apps/aws-cdk-deployed/app/playground/: classifier.py
apps/aws-cdk-deployed/scripts/: run.sh
apps/chatger/web/: Dockerfile  pyproject.toml
apps/chatger/web/Chatter/ChatBot/: Chat.py  finetune.py  generate_token.py  load_creds.py  model_scheduling.py  structure_prompt.py
apps/chatger/web/Chatter/Database/: connection.py  models.py
apps/chatger/web/Chatter/GUI/Information/: Question.py
apps/chatger/web/Chatter/GUI/Tab/: History.py  admin.py
apps/chatger/web/Chatter/Judge/: Judge.py  Plot.py
apps/chatger/web/Chatter/Utils/: Update.py
chatger/: .dockerignore  README.md
docs/: CONTRIBUTING.md  about.md  index.md  package-lock.json  package.json
search/: search_index.json
templates/: 404.html  about_us.html  account.html  charts.html  docs.html  head.html  help.html  home.html  index.html  license.html  login.html  navbar.html  notifications.html  orders.html  playgrounds.html  playgrounds_guideline.html  reset-password.html  settings.html  signup.html  teaching.html
test/: dev_env_test.py  package_test.py  plot_and_pages_test.py  test_df.py  test_load_dataframe.py  test_scripts_module.py  update_function.py
web/: .gitignore  README.md  next-sitemap.config.js  next.config.js  package.json  pnpm-lock.yaml  prettier.config.js  tailwind.config.js
(+197 files in other folders)
